// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticFooter component renders properly trending 1`] = `
<div
  className="footer"
>
  <div
    className="side"
  />
  <div
    className="main"
  >
    <div
      className="title"
    >
      Top Trending GIFs!
    </div>
    <div
      className="attribution"
    >
      <img
        className="img"
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    className="side"
  >
    <div
      className="button"
      onClick={undefined}
    >
      <img
        className="imgRefresh"
        src="test-file-stub"
      />
    </div>
  </div>
</div>
`;

exports[`StaticFooter component show nav renders properly 1`] = `
<div
  className="footer"
>
  <div
    className="side"
  >
    <div
      className="button"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="main"
  >
    <div
      className="title"
    >
      Showing page 1 of 10
    </div>
    <div
      className="attribution"
    >
      <img
        className="img"
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    className="side"
  >
    <div
      className="button"
      onClick={[Function]}
    >
      &gt;
    </div>
  </div>
</div>
`;

exports[`StaticFooter component show nav renders properly with forward disabled 1`] = `
<div
  className="footer"
>
  <div
    className="side"
  >
    <div
      className="button"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="main"
  >
    <div
      className="title"
    >
      Showing page 1 of 10
    </div>
    <div
      className="attribution"
    >
      <img
        className="img"
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    className="side"
  >
    <div
      className="button buttonDisabled"
      onClick={[Function]}
    >
      &gt;
    </div>
  </div>
</div>
`;

exports[`StaticFooter component show nav renders properly with prev disabled 1`] = `
<div
  className="footer"
>
  <div
    className="side"
  >
    <div
      className="button buttonDisabled"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="main"
  >
    <div
      className="title"
    >
      Showing page 1 of 10
    </div>
    <div
      className="attribution"
    >
      <img
        className="img"
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    className="side"
  >
    <div
      className="button"
      onClick={[Function]}
    >
      &gt;
    </div>
  </div>
</div>
`;
